--- a/async-wait/react-async-await/package.json
+++ b/async-wait/react-async-await/package.json
@@ -15,6 +15,7 @@
     "react-scripts": "5.0.0",
     "request": "^2.88.2",
     "sass": "^1.47.0",
+    "tailwind-scrollbar-hide": "^1.1.7",
     "web-vitals": "^2.1.3"
   },
   "scripts": {
